--- a/app/src/main/res/layout/card_services.xml
+++ b/app/src/main/res/layout/card_services.xml
@@ -78,10 +78,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/coming_soon"
                     android:text="@string/coming_soon"
                     app:text_visibility="@{Card}"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/dark_ocean_blue"
                     android:textSize="12sp"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
