--- a/app/src/main/res/layout/fragment_available_trip.xml
+++ b/app/src/main/res/layout/fragment_available_trip.xml
@@ -38,7 +38,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:list_data_available_trip="@{viewModel.availableTrips}"
+            app:bind_data="@{viewModel.availableTrips}"
             tools:listitem="@layout/card_available_trips" />
 
 
