--- a/app/src/main/res/layout/fragment_home_driver.xml
+++ b/app/src/main/res/layout/fragment_home_driver.xml
@@ -44,8 +44,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:list_data="@{viewModel.homeDriverServices}"
-                    tools:listitem="@layout/card_home_rider" />
+                    app:bind_data="@{viewModel.homeDriverServices}"
+                    tools:listitem="@layout/card_services" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
