--- a/app/src/main/res/layout/fragment_suggest_trip.xml
+++ b/app/src/main/res/layout/fragment_suggest_trip.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.driver.home.home_services.suggest_trip.suggest_trip">
+    tools:context=".ui.driver.home.home_services.suggest_trip.SuggestTripsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
