--- a/app/src/main/res/layout/fragment_work_in_a_taxi.xml
+++ b/app/src/main/res/layout/fragment_work_in_a_taxi.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.driver.home.home_services.taxi.work_in_a_taxi">
+    tools:context=".ui.driver.home.home_services.taxi.TaxiFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
