--- a/app/src/main/res/navigation/work_in_trip.xml
+++ b/app/src/main/res/navigation/work_in_trip.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/workInSpecificTripFragment"
-        android:name="com.theideal.goride.ui.driver.home.home_services.work_in_specific_trip.WorkInSpecificTripFragment"
+        android:name="com.theideal.goride.ui.driver.home.home_services.work_in_trip.WorkInTripFragment"
         android:label="fragment_work_in_a_specific_trip"
-        tools:layout="@layout/fragment_work_in_a_specific_trip" />
+        tools:layout="@layout/fragment_work_in_trip" />
 </navigation>
