--- a/app/src/main/res/layout/card_trips_suggestion.xml
+++ b/app/src/main/res/layout/card_trips_suggestion.xml
@@ -1,55 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+        <variable
+            name="tripsLine"
+            type="com.theideal.goride.model.TripsLine" />
+
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       >
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true">
 
-        <TextView
-            android:id="@+id/tv_from_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/from_sadat_city"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/tv_to_card"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_to_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/to_badr_city"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_from_card" />
+            <TextView
+                android:id="@+id/tv_from_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/from_sadat_city"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/tv_to_card"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:set_location_text="@{tripsLine.startDestination}" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_100"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@id/btn_add_card"
-            app:layout_constraintStart_toEndOf="@id/tv_from_card"
-            app:layout_constraintTop_toTopOf="parent" />
-        />
+            <TextView
+                android:id="@+id/tv_to_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/to_badr_city"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_from_card"
+                app:set_location_text="@{tripsLine.endDestination}" />
 
-        <ImageButton
-            android:id="@+id/btn_add_card"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/vc_add"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/_100"
+                android:text="@{tripsLine.HMRequest}"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toStartOf="@id/btn_add_card"
+                app:layout_constraintStart_toEndOf="@id/tv_from_card"
+                app:layout_constraintTop_toTopOf="parent" />
+            />
 
-</com.google.android.material.card.MaterialCardView>
+            <ImageButton
+                android:id="@+id/btn_add_card"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/vc_add"
+                app:isHSupported="@{!tripsLine.isHSupported}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/btn_add_card_support"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/vc_check"
+                app:isHSupported="@{tripsLine.isHSupported}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</layout>
