get suggest trips from firebase

--- a/app/src/main/res/layout/fragment_suggest_trip_driver.xml
+++ b/app/src/main/res/layout/fragment_suggest_trip_driver.xml
@@ -26,13 +26,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-            <androidx.recyclerview.widget.RecyclerView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:bind_data="@{viewModel.listOfSuggestTrips}"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/card_trips_suggestion" />
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_suggest_trips"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:bind_data="@{viewModel.listOfSuggestTrips}"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/card_trips_suggestion" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
         </androidx.cardview.widget.CardView>
 
 
