change the thems

--- a/app/src/main/res/layout/fragment_home_rider.xml
+++ b/app/src/main/res/layout/fragment_home_rider.xml
@@ -17,20 +17,35 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.rider.HomeRiderFragment">
+        android:layout_height="match_parent">
 
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ride_services"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:bind_data="@{viewModel.rideServicesData}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            style="@style/CardContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/card_services" />
+            app:layout_constraintTop_toTopOf="parent">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".ui.rider.HomeRiderFragment">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ride_services"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:bind_data="@{viewModel.rideServicesData}"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:listitem="@layout/card_services" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </layout>
