--- a/app/src/main/res/layout/fragment_profile_driver.xml
+++ b/app/src/main/res/layout/fragment_profile_driver.xml
@@ -20,9 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:cardCornerRadius="8dp"
-            app:cardBackgroundColor="@color/ocean_blue"
-            app:cardElevation="4dp"
+            style="@style/CardContainer"
+
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
