--- a/app/src/main/res/layout/fragment_serivces_driver.xml
+++ b/app/src/main/res/layout/fragment_serivces_driver.xml
@@ -23,12 +23,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:cardUseCompatPadding="true"
-            app:cardBackgroundColor="@color/ocean_blue"
+            style="@style/CardContainer"
             app:layout_constraintTop_toTopOf="parent">
             <LinearLayout
                 android:layout_width="match_parent"
