--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.GoRide" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.GoRide" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/sunset_orange</item>
@@ -13,5 +13,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">?attr/colorPrimaryVariant</item>
+        <item name="android:actionBarItemBackground">?attr/colorPrimaryVariant</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="CardViewBackground">@color/dark_ocean_blue</item>
     </style>
 </resources>
