the layout done

--- a/app/src/main/res/layout/item_choose_trip_driver.xml
+++ b/app/src/main/res/layout/item_choose_trip_driver.xml
@@ -8,6 +8,11 @@
             name="tripsLine"
             type="com.theideal.goride.model.TripsLine" />
 
+        <variable
+            name="viewModel"
+            type="com.theideal.goride.ui.driver.home.home_services.work_in_trip.WorkInTripFragmentViewModel" />
+
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -49,8 +54,8 @@
             android:id="@+id/item_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:isHSupported="@{tripsLine.isHSupported}"
-            android:onClick="@{() -> tripsLine}"
+            android:onClick="@{() -> viewModel.addAndRemoveTrip(tripsLine)}"
+            app:isChecked="@{viewModel.isChecked}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
