--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -14,4 +14,9 @@
         <item name="cardMaxElevation">4dp</item>
 
     </style>
+<style name="SnackbarStyle" parent="Widget.MaterialComponents.Snackbar">
+  <item name="android:background">@color/white</item>
+  <item name="android:textColor">@color/black</item>
+  <item name="android:textSize">16sp</item>
+</style>
 </resources>
