--- a/app/src/main/res/layout/fragment_destination_preferences.xml
+++ b/app/src/main/res/layout/fragment_destination_preferences.xml
@@ -15,13 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="1"
         tools:context=".ui.driver.home.home_services.work_in_trip.WorkInTripFragment">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.02"
             android:gravity="center"
             android:text="@string/choose_the_trip_you_want_to_work_in"
             android:textSize="20sp" />
@@ -30,8 +28,7 @@
             android:id="@+id/cardView"
             style="@style/CardContainer"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.47">
+            android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -54,51 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
-            android:layout_weight="0.01"
-            android:onClick="@{() -> viewModel.addTrip()}"
+            android:onClick="@{() -> viewModel.showDialog()}"
             android:text="@string/_add" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.02"
-            android:gravity="center"
-            android:text="@string/you_are_working_in_the_following_trips"
-            android:textSize="20sp" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardView2"
-            style="@style/CardContainer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.47">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_trips_line2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:bind_data="@{viewModel.tripLineListThatYouWorkOn}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:listitem="@layout/item_choose_trip_driver" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </com.google.android.material.card.MaterialCardView>
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="4dp"
-            android:layout_weight="0.01"
-            android:text="@string/_delete" />
     </LinearLayout>
 </layout>
