--- a/app/src/main/res/layout/item_choose_trip_driver.xml
+++ b/app/src/main/res/layout/item_choose_trip_driver.xml
@@ -19,8 +19,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_from_card"
@@ -50,16 +49,11 @@
                 android:layout_height="40dp"
                 android:hint="@string/fare_example"
                 android:text="@{tripsLine.fare}"
-                app:layout_constraintEnd_toStartOf="@+id/item_checkbox"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <CheckBox
-                android:id="@+id/item_checkbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:isChecked="@{tripsLine}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </layout>
