--- a/app/src/main/res/layout/fragment_destination_preferences.xml
+++ b/app/src/main/res/layout/fragment_destination_preferences.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.theideal.goride.ui.driver.profile.items.DestinationPreferenceViewModel" />
+            type="com.theideal.goride.ui.driver.profile.items.destination.DestinationPreferenceViewModel" />
 
     </data>
 
