--- a/app/src/main/res/layout/card_services.xml
+++ b/app/src/main/res/layout/card_services.xml
@@ -32,7 +32,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:set_image="@{Card}"
+                    app:set_image="@{Card.image}"
                     />
 
                 <TextView
