--- a/app/src/main/res/layout/card_user_info.xml
+++ b/app/src/main/res/layout/card_user_info.xml
@@ -42,7 +42,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/vc_person"
-                app:set_image_users="@{user}" />
+                app:set_image="@{user.profileImage}" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </layout>
